Create contact page
*Create initial layout for contact page

*Create initial layout for footer

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -6,8 +6,7 @@
 
     <!-- Font Awesome -->
     <link
-      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
-      rel="stylesheet"
+    <script src="https://use.fontawesome.com/4c85c49757.js"></script>
     />
 
     <!-- Bootstrap CSS -->
@@ -29,7 +28,11 @@
 
     <title>Colour Theory</title>
   </head>
+
   <body>
+
+<!-- Nav bar section-->
+
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="d-flex flex-grow-1">
@@ -70,5 +73,44 @@
         </div>
       </nav>
     </div>
+
+    <!-- Header Section -->
+
+    <div class="container-fluid text-center">
+        <div class="main-title">
+<h1> HOW TO USE COLOUR IN YOUR HOME </h1>
+        </div>
+
+        <div>
+            <img src="/IMAGES/Living Room.jpg" alt="" width="1000" height="" alt="" />
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="container-fluid" >
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
+          </div>
+
+          <div>
+            <i class="social-icons fa-brands fa-twitter" aria-hidden="true"></i>
+            <i class="social-icons fa-brands fa-facebook-f" aria-hidden="true"></i>
+            <i class="social-icons fa-brands fa-instagram" aria-hidden="true"></i>
+            <i class="social-icons fa-solid fa-envelope" aria-hidden="true"></i>
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul>
+        </footer>
+      </div>
+
   </body>
 </html>
