Align drop down menu item
*Align Palettes drop down menu with other menu items

*Create additional pages to link to drop down menu

--- a/.devcontainer/CODE/contact.html
+++ b/.devcontainer/CODE/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <!-- Font Awesome -->
-     <link
-     <script src="https://use.fontawesome.com/4c85c49757.js"></script>
-     />
+
+     <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
+    
  
      <!-- Bootstrap CSS -->
  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
