--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -29,64 +29,81 @@
 
   <body>
     
-    <?php include 'navbar.php' ?>
+  <!-- Nav bar section-->
 
-<!-- Nav bar section -->
-
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="d-flex flex-grow-1">
-          <span class="w-100 d-lg-none d-block"
-            <!-- >hidden spacer to center brand on mobile</span -->
-          >
-          <a class="navbar-brand d-none d-lg-inline-block" href="#">
-            <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
-          </a>
-          <div class="w-100 text-right">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#myNavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-        </div>
-        <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
-          <ul class="navbar-nav ml-auto flex-nowrap">
-            <li class="nav-item">
-              <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link dropdown-toggle m-2 menu-item" data-toggle="dropdown">Palettes</a>
-              <div class="dropdown-menu" role="menu">
-                <a class="dropdown-item" href="#">Neutral</a>
-                <a class="dropdown-item" href="#">Colour Pop</a>
-                <a class="dropdown-item" href="#">Mid Century</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="d-flex flex-grow-1">
+      <span class="w-100 d-lg-none d-block"
+        ><!-- hidden spacer to center brand on mobile --></span
+      >
+      <a class="navbar-brand d-none d-lg-inline-block" href="#">
+        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+      </a>
+      <div class="w-100 text-right">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#myNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
     </div>
+    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+      <ul class="navbar-nav ml-auto flex-nowrap">
+        <li class="nav-item">
+          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link dropdown-toggle m-2 menu-item">Palettes</a>
+          <div class="dropdown-toggle">
+            <a class="dropdown-item" href="#">Neutral</a>
+            <a class="dropdown-item" href="#">Colour Pop</a>
+            <a class="dropdown-item" href="#">Mid Century</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link m-2 menu-item">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
 
-    <!-- Header Section -->
 
+    <!-- HEADER SECTION -->
     <div class="container-fluid text-center">
         <div class="main-title">
 <h1> HOW TO USE COLOUR IN YOUR HOME </h1>
         </div>
 
-        <div>
-            <img src="/IMAGES/Living Room.jpg" alt="" width="1000" height="" alt="" />
-        </div>
-    </div>
+        <!-- CAROUSEL SECTION  -->
 
-    <!-- Footer Section -->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="/IMAGES/Carousel_image_1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/IMAGES/Carousel_image_2.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/IMAGES/Carousel_image_3.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+    <!-- FOOTER SECTION -->
 
     <div class="container-fluid" >
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
