Link navbar links to correct pages

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -54,18 +54,22 @@
     <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
-          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+        </li>
+
+        <!-- Dropdown menu section -->
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Palettes
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Neutral</a></li>
+            <li><a class="dropdown-item" href="#">Colour Pop</a></li>
+            <li><a class="dropdown-item" href="#">Mid Century</a></li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item">Palettes</a>
-          <div class="dropdown-toggle">
-            <a class="dropdown-item" href="#">Neutral</a>
-            <a class="dropdown-item" href="#">Colour Pop</a>
-            <a class="dropdown-item" href="#">Mid Century</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link m-2 menu-item">Contact</a>
+          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
         </li>
       </ul>
     </div>
