--- a/.devcontainer/CODE/contact.html
+++ b/.devcontainer/CODE/contact.html
@@ -66,7 +66,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link m-2 menu-item">Contact</a>
+            <a href="CODE/contact.html" class="nav-link m-2 menu-item">Contact</a>
           </li>
         </ul>
       </div>
