Fix drop down menu not working

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css"/>
 
     <title>Colour Theory</title>
   </head>
@@ -59,13 +59,13 @@
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Neutral</a></li>
-            <li><a class="dropdown-item" href="#">Colour Pop</a></li>
-            <li><a class="dropdown-item" href="#">Mid Century</a></li>
+            <li><a class="dropdown-item" href="Palettes/Neutral.html">Neutral</a></li>
+            <li><a class="dropdown-item" href="Palettes/Monochromatic.html">Monochromatic</a></li>
+            <li><a class="dropdown-item" href="Palettes/Maximalist.html">Maximalist</a></li>
           </ul>
         </li>
         <li class="nav-item">
