--- a/.devcontainer/CODE/Navbar testing.html
+++ b/.devcontainer/CODE/Navbar testing.html
@@ -51,15 +51,16 @@
         </button>
       </div>
     </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+    <div class="menu collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
-          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
         </li>
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <!-- <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
