Create Palettes pages
*Create Palettes page template
*Copy to other Palette pages and replace with relevant images and content.

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -63,7 +63,7 @@
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="Palettes/Neutral.html">Neutral</a></li>
+            <li><a class="dropdown-item" href="/.devcontainer/CODE/Palettes/Neutral.html">Neutral</a></li>
             <li><a class="dropdown-item" href="Palettes/Monochromatic.html">Monochromatic</a></li>
             <li><a class="dropdown-item" href="Palettes/Maximalist.html">Maximalist</a></li>
           </ul>
