Put drop down menu on all pages

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -63,9 +63,9 @@
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/.devcontainer/CODE/Palettes/Neutral.html">Neutral</a></li>
-            <li><a class="dropdown-item" href="Palettes/Monochromatic.html">Monochromatic</a></li>
-            <li><a class="dropdown-item" href="Palettes/Maximalist.html">Maximalist</a></li>
+            <li><a class="dropdown-item" href="Neutral.html">Neutral</a></li>
+            <li><a class="dropdown-item" href="Monochromatic.html">Monochromatic</a></li>
+            <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
           </ul>
         </li>
         <li class="nav-item">
