--- a/.devcontainer/CODE/Maximalist.html
+++ b/.devcontainer/CODE/Maximalist.html
@@ -32,50 +32,50 @@
     
   <!-- Nav bar section-->
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="d-flex flex-grow-1">
-      <span class="w-100 d-lg-none d-block"
-        ><!-- hidden spacer to center brand on mobile --></span
-      >
-      <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
-      </a>
-      <div class="w-100 text-right">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#myNavbar"
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="d-flex flex-grow-1">
+        <span class="w-100 d-lg-none d-block"
+          ><!-- hidden spacer to center brand on mobile --></span
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand d-none d-lg-inline-block" href="#">
+          <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+        </a>
+        <div class="w-100 text-right">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
       </div>
-    </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
-      <ul class="navbar-nav ml-auto flex-nowrap">
-        <li class="nav-item">
-          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
-        </li>
-
-        <!-- Dropdown menu section -->
-        <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Palettes
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="Palettes/Neutral.html">Neutral</a></li>
-            <li><a class="dropdown-item" href="Palettes/Monochromatic.html">Monochromatic</a></li>
-            <li><a class="dropdown-item" href="Palettes/Maximalist.html">Maximalist</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
+      <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+          <li class="nav-item">
+            <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          </li>
+  
+          <!-- Dropdown menu section -->
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+              Palettes
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="Neutral.html">Neutral</a></li>
+              <li><a class="dropdown-item" href="Monochromatic.html">Monochromatic</a></li>
+              <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 
 <br>
 
