Footer copied to all pages

--- a/.devcontainer/CODE/colour-theory.html
+++ b/.devcontainer/CODE/colour-theory.html
@@ -27,6 +27,75 @@
     <title>What is Colour Theory?</title>
 </head>
 <body>
-    
+
+  <!-- Nav bar section-->
+
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="d-flex flex-grow-1">
+      <span class="w-100 d-lg-none d-block"
+        ><!-- hidden spacer to center brand on mobile --></span
+      >
+      <a class="navbar-brand d-none d-lg-inline-block" href="#">
+        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+      </a>
+      <div class="w-100 text-right">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#myNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+      <ul class="navbar-nav ml-auto flex-nowrap">
+        <li class="nav-item">
+          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+        </li>
+
+        <!-- Dropdown menu section -->
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Palettes
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="Neutral.html">Neutral</a></li>
+            <li><a class="dropdown-item" href="Monochromatic.html">Monochromatic</a></li>
+            <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
+
+    <!-- FOOTER SECTION -->
+
+    <div class="container-fluid" >
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
+        </div>
+
+        <div class="nav col-md-2 justify-content-between">
+          <i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i>
+        </div>
+      </footer>
+    </div>
+
+        
 </body>
 </html>
