--- a/.devcontainer/CODE/contact.html
+++ b/.devcontainer/CODE/contact.html
@@ -155,6 +155,27 @@
 
 
 </section>
+
+    <!-- FOOTER SECTION -->
+
+    <div class="container-fluid" >
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
+        </div>
+
+        <div class="nav col-md-2 justify-content-between">
+          <i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i>
+          <i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i>
+        </div>
+      </footer>
+    </div>
+
     
 </body>
 </html>
