--- a/.devcontainer/CODE/Monochromatic.html
+++ b/.devcontainer/CODE/Monochromatic.html
@@ -55,6 +55,9 @@
       <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
         <ul class="navbar-nav ml-auto flex-nowrap">
           <li class="nav-item">
+            <a href="index.html" class="nav-link m-2 menu-item">Home</a>
+          </li>
+          <li class="nav-item">
             <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
           </li>
   
