--- a/.devcontainer/CODE/Neutral.html
+++ b/.devcontainer/CODE/Neutral.html
@@ -54,7 +54,10 @@
       </div>
       <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
         <ul class="navbar-nav ml-auto flex-nowrap">
-          <li class="nav-item">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link m-2 menu-item">Home</a>
+              </li>
+            <li class="nav-item">
             <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
           </li>
   
