Fix logo not showing on mobile

--- a/.devcontainer/CODE/TESTING/Navbar testing.html
+++ b/.devcontainer/CODE/TESTING/Navbar testing.html
@@ -37,8 +37,8 @@
       <span class="w-100 d-lg-none d-block"
         ><!-- hidden spacer to center brand on mobile --></span
       >
-      <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+      <a class="navbar-brand d-none d-inline-block" href="#">
+        <img src="/IMAGES/Logo.webp" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
