Add favicon to site

--- a/.devcontainer/CODE/TEMPLATE.html
+++ b/.devcontainer/CODE/TEMPLATE.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="index.css" />
 
     <title>Colour Theory</title>
+    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
   </head>
 
   <body>
