--- a/.devcontainer/CODE/404-page.html
+++ b/.devcontainer/CODE/404-page.html
@@ -82,6 +82,17 @@
   </nav>
 </div>
 
+<div class="d-flex align-items-center justify-content-center vh-100">
+  <div class="text-center">
+      <h1 class="display-1 fw-bold">404</h1>
+      <p class="fs-3"> <span class="text-danger">Oooops!</span> We seem to have got you lost.</p>
+      <p class="lead">
+          The page you’re looking for doesn’t exist.
+        </p>
+      <a href="index.html" class="btn btn-primary">Go Home</a>
+  </div>
+</div>
+
     
     <!-- Footer Section -->
 
