Fix spacing on 404 page

--- a/.devcontainer/CODE/404-page.html
+++ b/.devcontainer/CODE/404-page.html
@@ -82,7 +82,9 @@
   </nav>
 </div>
 
-<div class="d-flex align-items-center justify-content-center vh-100">
+<!-- 404 section  -->
+
+<div class="d-flex align-items-center justify-content-center">
   <div class="text-center">
       <h1 class="display-1 fw-bold">404</h1>
       <p class="fs-3"> <span class="text-danger">Oooops!</span> We seem to have got you lost.</p>
