--- a/.devcontainer/CODE/Maximalist.html
+++ b/.devcontainer/CODE/Maximalist.html
@@ -95,10 +95,10 @@
     <br>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="/IMAGES/monochromatic_room.webp">
+        <img class="thumbnail img-responsive" src="/IMAGES/maximalist_room.webp">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="/IMAGES/Monochromatic.png">
+        <img class="thumbnail img-responsive" src="/IMAGES/maximalist_palette.png">
       </div>
 </div>
 
