Start designing content for Colour Theory page

--- a/.devcontainer/CODE/colour-theory.html
+++ b/.devcontainer/CODE/colour-theory.html
@@ -37,7 +37,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -76,6 +76,31 @@
       </ul>
     </div>
   </nav>
+</div>
+
+<!-- TITLE SECTION  -->
+
+<div class="container-fluid text-center">
+
+  <h2 class="palette-title">COLOUR THEORY </h2>
+<br>
+<img class="colour-wheel" src="/IMAGES/COLOUR WHEEL.webp" alt="" width="" height="500em">
+
+</div>
+<br>
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6 col-no-padding">
+    <img class="thumbnail img-responsive" src="/IMAGES/monochromatic_room.webp">
+  </div>
+  <div class="col-xs-12 col-sm-6 col-no-padding">
+    <p class="palette-title">
+      A monochromatic scheme creates a calming feel whilst also delivering
+      impact. It is a great option for a bedroom where you want to create a
+      feeling of relaxation. The mixture of strong but similarly toned colours
+      means there is nothing jarring to the eye, every part of the room flows
+      very naturally into the next.
+    </p>
+  </div>
 </div>
 
 
