--- a/.devcontainer/CODE/colour-theory.html
+++ b/.devcontainer/CODE/colour-theory.html
@@ -84,22 +84,18 @@
 
   <h2 class="palette-title">COLOUR THEORY </h2>
 <br>
+<p>The study of how colour effects mood has been around since hthe </p>
 <img class="colour-wheel" src="/IMAGES/COLOUR WHEEL.webp" alt="" width="" height="500em">
 
 </div>
 <br>
+
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-6 col-no-padding">
-    <img class="thumbnail img-responsive" src="/IMAGES/monochromatic_room.webp">
+    <img class="thumbnail img-responsive" src="IMAGES/yellow_bg.png">
   </div>
   <div class="col-xs-12 col-sm-6 col-no-padding">
-    <p class="palette-title">
-      A monochromatic scheme creates a calming feel whilst also delivering
-      impact. It is a great option for a bedroom where you want to create a
-      feeling of relaxation. The mixture of strong but similarly toned colours
-      means there is nothing jarring to the eye, every part of the room flows
-      very naturally into the next.
-    </p>
+    <p class="palette-title">Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
 </div>
 
