--- a/.devcontainer/CODE/contact.html
+++ b/.devcontainer/CODE/contact.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+        <img src="IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
