--- a/.devcontainer/CODE/Monochromatic.html
+++ b/.devcontainer/CODE/Monochromatic.html
@@ -39,7 +39,7 @@
           ><!-- hidden spacer to center brand on mobile --></span
         >
         <a class="navbar-brand d-none d-lg-inline-block" href="#">
-          <img src="/IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+          <img src="IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
         </a>
         <div class="w-100 text-right">
           <button
@@ -99,10 +99,10 @@
     <br>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="/IMAGES/monochromatic_room.webp">
+        <img class="thumbnail img-responsive" src="IMAGES/monochromatic_room.webp">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="/IMAGES/Monochromatic.png">
+        <img class="thumbnail img-responsive" src="IMAGES/Monochromatic.png">
       </div>
 </div>
 
