--- a/.devcontainer/CODE/TEMPLATE.html
+++ b/.devcontainer/CODE/TEMPLATE.html
@@ -33,7 +33,7 @@
   <!-- Nav bar section-->
 
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
         ><!-- hidden spacer to center brand on mobile --></span
@@ -81,6 +81,8 @@
     </div>
   </nav>
 </div>
+
+<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
 
     
     <!-- Footer Section -->
