--- a/.devcontainer/CODE/Maximalist.html
+++ b/.devcontainer/CODE/Maximalist.html
@@ -32,7 +32,7 @@
     
   <!-- Nav bar section-->
 
-  <div class="container-fluid">
+  <div class="container-fluid sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="d-flex flex-grow-1">
         <span class="w-100 d-lg-none d-block"
