Put padding around containers

--- a/.devcontainer/CODE/colour-theory.html
+++ b/.devcontainer/CODE/colour-theory.html
@@ -37,7 +37,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="/IMAGES/Logo.png" alt="" width="" height="125px" />
+        <img src="IMAGES/Logo.png" alt="" width="" height="125px" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -83,12 +83,11 @@
 <div class="container-fluid text-center">
 
   <h2 class="palette-title">COLOUR THEORY </h2>
-<br>
+
 <p>The study of how colour effects mood has been around since hthe </p>
 <img class="colour-wheel" src="/IMAGES/COLOUR WHEEL.webp" alt="" width="" height="500em">
 
 </div>
-<br>
 
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-6 col-no-padding">
