--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -91,13 +91,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/IMAGES/Carousel_image_1.png" alt="First slide">
+              <img class="d-block w-100" src="IMAGES/Carousel_image_1.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/IMAGES/Carousel_image_2.png" alt="Second slide">
+              <img class="d-block w-100" src="IMAGES/Carousel_image_2.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/IMAGES/Carousel_image_3.png" alt="Third slide">
+              <img class="d-block w-100" src="IMAGES/Carousel_image_3.png" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -109,6 +109,18 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+
+         <!-- SUB HEADER SECTION -->
+    <div class="container-fluid text-center">
+      <div">
+<h3> The website that tells you everything you need to know about colour, and how to use it in your home.  
+</h3>
+
+<!-- COMING SOON SECTION -->
+
+<div class="container-fluid coming-soon">
+
+</div>
 
     <!-- FOOTER SECTION -->
 
