Add Coming Soon section to home page

--- a/.devcontainer/CODE/index.html
+++ b/.devcontainer/CODE/index.html
@@ -119,7 +119,9 @@
 <!-- COMING SOON SECTION -->
 
 <div class="container-fluid coming-soon">
-
+<h3> COMING SOON</h3>
+<h4>Find your Colour Personality Quiz</h4>
+<p>Find the colours you need in your home so you can start creating your dream spaces.</p>
 </div>
 
     <!-- FOOTER SECTION -->
