Fix image paths in palette pages

--- a/.devcontainer/CODE/Monochromatic.html
+++ b/.devcontainer/CODE/Monochromatic.html
@@ -96,10 +96,10 @@
     </div>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="IMAGES/monochromatic_room.webp">
+        <img class="thumbnail img-responsive" src="IMAGES/PALETTES/monochromatic_room.webp">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="IMAGES/Monochromatic.png">
+        <img class="thumbnail img-responsive" src="IMAGES/PALETTES/Monochromatic.png">
       </div>
 </div>
 
