--- a/.devcontainer/CODE/Neutral.html
+++ b/.devcontainer/CODE/Neutral.html
@@ -92,10 +92,10 @@
     </div>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="IMAGES/neutral_room.webp">
+        <img class="thumbnail img-responsive" src="IMAGES/PALETTES/neutral_room.webp">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="IMAGES/neutral_palette.png">
+        <img class="thumbnail img-responsive" src="IMAGES/PALETTES/neutral_palette.png">
       </div>
 </div>
 
