Set Colour Theory page out

--- a/.devcontainer/CODE/colour-theory.html
+++ b/.devcontainer/CODE/colour-theory.html
@@ -89,13 +89,72 @@
 
 </div>
 
+<!-- Colour sections -->
+
+<div class="container-fluid">
+<div class="colours row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Yellow.webp">
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+</div>
+
 <div class="row row-no-margin">
-  <div class="col-xs-12 col-sm-6 col-no-padding">
-    <img class="thumbnail img-responsive" src="IMAGES/yellow_bg.png">
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
-  <div class="col-xs-12 col-sm-6 col-no-padding">
-    <p class="palette-title">Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Orange.webp">
   </div>
+</div>
+
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Red.webp">
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+</div>
+
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Pink.webp">
+  </div>
+</div>
+
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Purple.webp">
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+</div>
+
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Blue.webp">
+  </div>
+</div>
+
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-6">
+    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Green.webp">
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
+  </div>
+</div>
+
 </div>
 
 
