Change image paths on all pages

--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="IMAGES/Logo.webp" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
