--- a/colour-theory.html
+++ b/colour-theory.html
@@ -37,7 +37,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="IMAGES/Logo.png" alt="" width="" height="125px" />
+        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -85,7 +85,7 @@
   <h2 class="palette-title">COLOUR THEORY </h2>
 
 <p>The study of how colour effects mood has been around since hthe </p>
-<img class="colour-wheel" src="/IMAGES/COLOUR WHEEL.webp" alt="" width="" height="500em">
+<img class="colour-wheel" src="assets/site-images/COLOUR WHEEL.webp" alt="" width="" height="500em">
 
 </div>
 
@@ -94,7 +94,7 @@
 <div class="container-fluid">
 <div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Yellow.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Yellow.webp">
   </div>
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
@@ -106,13 +106,13 @@
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Orange.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Orange.webp">
   </div>
 </div>
 
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Red.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Red.webp">
   </div>
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
@@ -124,13 +124,13 @@
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Pink.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Pink.webp">
   </div>
 </div>
 
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Purple.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Purple.webp">
   </div>
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
@@ -142,13 +142,13 @@
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Blue.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Blue.webp">
   </div>
 </div>
 
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-6">
-    <img class="thumbnail img-responsive" src="IMAGES/COLOURS/Green.webp">
+    <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Green.webp">
   </div>
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
