Put correct navbar on all pages

--- a/404-page.html
+++ b/404-page.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
@@ -32,14 +32,14 @@
     
   <!-- Nav bar section-->
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container-fluid sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="IMAGES/Logo.webp" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -63,7 +63,6 @@
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-          <!-- <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
             <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
@@ -81,6 +80,8 @@
     </div>
   </nav>
 </div>
+
+<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
 
 <!-- 404 section  -->
 
