--- a/index.html
+++ b/index.html
@@ -22,23 +22,24 @@
       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Colour Theory</title>
+    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
   </head>
 
   <body>
     
   <!-- Nav bar section-->
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container-fluid sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
         ><!-- hidden spacer to center brand on mobile --></span
       >
-      <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+      <a class="navbar-brand d-none d-inline-block" href="#">
+        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -51,18 +52,18 @@
         </button>
       </div>
     </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+    <div class="menu collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
           <a href="index.html" class="nav-link m-2 menu-item">Home</a>
         </li>
         <li class="nav-item">
-          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
         </li>
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -71,6 +72,7 @@
             <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
           </ul>
         </li>
+        
         <li class="nav-item">
           <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
         </li>
@@ -78,6 +80,8 @@
     </div>
   </nav>
 </div>
+
+<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
 
 
     <!-- HEADER SECTION -->
