--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-     <!-- Font Awesome -->
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
 
-     <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+
+    <title>Colour Theory</title>
+    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
+  </head>
+
+  <body>
     
- 
-     <!-- Bootstrap CSS -->
- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
- 
- <!-- jQuery first, then Popper.js, then Bootstrap JS -->
- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- 
- <!-- Google Fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
-       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
-       rel="stylesheet"
-     />
-     <link rel="stylesheet" href="index.css" />
+  <!-- Nav bar section-->
 
-    <title>Contact Us</title>
-</head>
-<body>
-
-<!-- Nav bar section-->
-
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container-fluid sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
         ><!-- hidden spacer to center brand on mobile --></span
       >
-      <a class="navbar-brand d-none d-lg-inline-block" href="#">
-        <img src="IMAGES/Logo.png" alt="" width="" height="125px" alt="" />
+      <a class="navbar-brand d-none d-inline-block" href="#">
+        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -52,18 +52,18 @@
         </button>
       </div>
     </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+    <div class="menu collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
           <a href="index.html" class="nav-link m-2 menu-item">Home</a>
         </li>
         <li class="nav-item">
-          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
         </li>
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -72,6 +72,7 @@
             <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
           </ul>
         </li>
+        
         <li class="nav-item">
           <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
         </li>
@@ -79,6 +80,8 @@
     </div>
   </nav>
 </div>
+
+<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
 
 
 <section class="mb-4">
