--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="index.html" class="nav-link m-2 menu-item">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
         </li>
 
         <!-- Dropdown menu section -->
