--- a/404-page.html
+++ b/404-page.html
@@ -31,8 +31,8 @@
   <body>
     
   <!-- Nav bar section-->
-
-<div class="container-fluid sticky-top">
+<div class="container-fluid">
+<div class="navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
@@ -80,8 +80,8 @@
     </div>
   </nav>
 </div>
-
-<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
+<img src="assets/site-images/Line.png" alt="" height="2px" width="100%">
+</div>
 
 <!-- 404 section  -->
 
