--- a/colour-theory.html
+++ b/colour-theory.html
@@ -31,8 +31,8 @@
   <body>
     
   <!-- Nav bar section-->
-
-<div class="container-fluid sticky-top">
+<div class="container-fluid">
+<div class="navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
@@ -80,8 +80,8 @@
     </div>
   </nav>
 </div>
-
-<img src="IMAGES/Line.png" alt="" height="2px" width="100%">
+<img src="assets/site-images/Line.png" alt="" height="2px" width="100%">
+</div>
 
 <!-- TITLE SECTION  -->
 
@@ -106,7 +106,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
@@ -115,7 +115,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Red.webp">
   </div>
@@ -124,7 +124,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
@@ -133,7 +133,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Purple.webp">
   </div>
@@ -142,7 +142,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <p>Yellow is the colour of happiness, of vitality jadklgjadfl;j dlgj l;dfhb</p>
   </div>
@@ -151,7 +151,7 @@
   </div>
 </div>
 
-<div class="row row-no-margin">
+<div class="colours row row-no-margin">
   <div class="col-xs-12 col-sm-6">
     <img class="thumbnail img-responsive" src="assets/site-images/COLOURS/Green.webp">
   </div>
